fixed some alignment and may need to revert to previous commit

--- a/client/src/components/UI/card/CardItem.module.scss
+++ b/client/src/components/UI/card/CardItem.module.scss
@@ -10,6 +10,7 @@
 	img {
 		width: 100%;
 		height: 100%;
+		padding: 0 10px;
 	}
 }
 
@@ -48,14 +49,17 @@
 	@media (min-width: 1800px) {
 		img {
 			width: 150px;
-			height: 150px;
+			height: 130px;
 			object-fit: contain;
 		}
 	}
 	@media (min-width: 2260px) {
 		img {
-			width: 250px;
-			height: 250px;
+			position: relative;
+			width: 100%;
+			height: 80%;
+			// width: 250px;
+			// height: 250px;
 			object-fit: contain;
 		}
 		.name {
