--- a/client/src/components/UI/card/CardItems.module.scss
+++ b/client/src/components/UI/card/CardItems.module.scss
@@ -3,7 +3,8 @@
 	height: 90%; // can be set to 85%
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: flex-start;
+	justify-content: center;
+	align-items: center;
 	padding: 5px;
 	border-radius: 25%;
 }
